# NFD-test-bed

./: CMakeLists.txt  LICENSE  Makefile  Makefile-cray  Makefile-handrolled  README.md  advection.f90  boundary_conditions.f90  diffusion.f90  initial_conditions.f90  integration.f90  mesh.f90  nfd.f90  pgf_bouyancy.f90  pgm5.f90  savedata.F90  savedata.f90  serial.pbs
PGM5/: makevtis.sh
PGM5/A1/: Makefile  advection.f90  gmeta  integration.f90  pgm5.f90  putfield.f03  savedata.f03
PGM5/A2/: Makefile  integration.f90  pgm5.f90
PGM5/A3/: initial_conditions.f90  integration.f90  pgm5.f90  putfield.F
PGM5/B/: Makefile  initial_conditions.f90  pgf_bouyancy.f90  pgm5.f90
PGM5/C/: Makefile  diffusion.f90  initial_conditions.f90  pgm5.f90
PGM5/D/: Makefile  diffusion.f90  initial_conditions.f90  integration.f90  pgm5.f90  savedata.f03
PGM5/E/: Makefile  diffusion.f90  initial_conditions.f90  mesh.f90  pgf_bouyancy.f90  pgm5.f90  readinputparameters.f90  savedata.f03
PGM5/F/: Makefile  diffusion.f90  initial_conditions.f90  pgf_bouyancy.f90  pgm5.f90  readinputparameters.f90
PGM5/Final/: CMakeLists.txt  Makefile  advection.f90  boundary_conditions.f90  diff.input  diff.input.lowres  diffusion.f90  initial_conditions.f90  inputfile.lowres  integration.f90  pgf_bouyancy.f90  pgm5.f90  savedata.f90  thermals.input.lowres
PGM5/OpenMP/: CMakeLists.txt  advection.f90  cmake_install.cmake  diffusion.f90  highres.json  lowres.json
PGM5/Serial/: CMakeLists.txt  initial_conditions.f90  pgm5.f90
